--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container-all">
         <header class="main-header">
             <nav class="main-navigation">
-                <ul class="nav">
+                <ul class="nav clearfix">
                     <li>
                         <a href="#">Информация</a>
                     </li>
@@ -38,8 +38,8 @@
                 <h2>Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</h2>
                 <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд каньон!</p>
             </section>
-            <section class="features-img">
-                <div class="content third">
+            <section class="features-img clearfix">
+                <div class="item third">
                     <h2>Настоящий городок</h2>
                     <span>&mdash; №1 &mdash;</span>
                     <p>Седона - не аттракцион для туристов,
@@ -50,44 +50,44 @@
                 </div>
             </section>
             <section class="feature-icons clearfix">
-                <div class="content third">
+                <div class="item third">
                     <img class="appartment" src="img/appartment-icon.png" width="75" height="72" alt="Жилье">
                     <b>Жилье</b>
                     <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </div>
-                <div class="content third">
+                <div class="item third">
                     <img class="food" src="img/food-icon.png" width="74" height="70" alt="Еда">
                     <b>Еда</b>
                     <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </div>
-                <div class="content third">
+                <div class="item third">
                     <img class="gift" src="img/gift-icon.png" width="64" height="76" alt="Сувениры">
                     <b>Сувениры</b>
                     <p>Не только китайского, но и местного производства!</p>
                 </div>
             </section>
-            <section class="features-img">
+            <section class="features-img clearfix">
                 <div class="image-feature two-third">
                     <img src="img/devils-bridge.jpg" width="800" height="256" alt="Мост дьявола">
                 </div>
-                <div class="content third">
+                <div class="item third">
                     <h2>Там есть мост дьявола</h2>
                     <span>&mdash; №2 &mdash;</span>
                     <p>Да, по нему можно пройти! Если конечно <br>вы осмелитесь</p>
                 </div>
             </section>
             <section class="features-last clearfix">
-                <div class="content third">
+                <div class="item third">
                     <b>Небольшая площадь</b>
                     <span>&mdash; №3 &mdash;</span>
                     <p>Все достопримечательности находятся очень близко</p>
                 </div>
-                <div class="content third">
+                <div class="item third">
                     <b>Красивая площадь</b>
                     <span>&mdash; №4 &mdash;</span>
                     <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                 </div>
-                <div class="content third">
+                <div class="item third">
                     <b>Мало туристов</b>
                     <span>&mdash; №5 &mdash;</span>
                     <p>Большинство едет в Гранд Каньон и толпится там</p>
