--- a/inner.html
+++ b/inner.html
@@ -11,7 +11,7 @@
     <div class="container-all">
         <header class="main-header">
             <nav class="main-navigation">
-                <ul class="nav">
+                <ul class="nav clearfix">
                     <li>
                         <a href="#">Информация</a>
                     </li>
@@ -36,148 +36,171 @@
                     <div class="fourth">
                         <fieldset class="infrastructure">
                             <legend>Инфраструктура:</legend>
-                            <input type="checkbox" name="pool" id="pool" checked>
-                            <label for="pool">Бассейн</label>
-                            <input type="checkbox" name="parking" id="parking">
-                            <label for="parking">Парковка</label>
-                            <input type="checkbox" name="wi-fi" id="wi-fi">
-                            <label for="wi-fi">Wi-fi</label>
+                            <div class="checkbox">
+                                <input type="checkbox" name="pool" id="pool" checked>
+                                <label for="pool">Бассейн</label>
+                            </div>
+                            <div class="checkbox">
+                                <input type="checkbox" name="parking" id="parking">
+                                <label for="parking">Парковка</label>
+                            </div>
+                            <div class="checkbox">
+                                <input type="checkbox" name="wi-fi" id="wi-fi">
+                                <label for="wi-fi">Wi-fi</label>
+                            </div>
                         </fieldset>
                     </div>
                     <div class="fourth">
                         <fieldset class="accomodation-type">
                             <legend>Тип жилья:</legend>
-                            <input type="checkbox" name="hotel" id="hotel" checked>
-                            <label for="hotel">Гостиница</label>
-                            <input type="checkbox" name="motel" id="motel" checked>
-                            <label for="motel">Мотель</label>
-                            <input type="checkbox" name="wi-fi" id="motel" checked>
-                            <label for="motel">Аппартаменты</label>
+                            <div class="checkbox">
+                                <input type="checkbox" name="hotel" id="hotel" checked>
+                                <label for="hotel">Гостиница</label>
+                            </div>
+                            <div class="checkbox">
+                                <input type="checkbox" name="motel" id="motel" checked>
+                                <label for="motel">Мотель</label>
+                            </div>
+                            <div class="checkbox">
+                                <input type="checkbox" name="wi-fi" id="motel" checked>
+                                <label for="motel">Аппартаменты</label>
+                            </div>
                         </fieldset>
                     </div>
                     <div class="two-fourth">
+                        <div class="filter-range">
                         <h2>Стоимость в сутки(Р):</h2>
-                        <div class="range">
-                            <span>От 0</span>
-                            <span>До 3000</span>
-                        </div>
-                        <input type="range" min="0" max="3000" step="100" multiple>
-                        <button class="result-btn" type="submit">Показать</button>
-                        <div class="range-control">
-                            <div class="scale">
-                                <div class="bar"></div>
+                            <div class="range">
+                                <div class="range-price">
+                                    <label>От
+                                        <input type="text" value="0">
+                                    </label>
+                                </div>
+                                <div class="range-price">
+                                    <label>До
+                                        <input type="text" value="3000">
+                                    </label>
+                                </div>
                             </div>
-                            <div class="toggle min-toggle"></div>
-                            <div class="toggle max-toggle"></div>
+                            <div class="range-control">
+                                <div class="scale">
+                                    <div class="bar"></div>
+                                </div>
+                                <div class="toggle min-toggle"></div>
+                                <div class="toggle max-toggle"></div>
+                            </div>
+                            <button class="result-btn" type="submit">Показать</button>
                         </div>
                     </div>
                 </form>
             </section>
-            <section class="results clearfix">
-                <div class="found">
-                    <span>Найдено:3</span>
-                </div>
-                <div class="sorting">
-                    <span>Сортировка</span>
-                    <ul>
-                        <li class="current">
-                            <a href="#">По цене</a>
-                        </li>
-                        <li>
-                            <a href="#">По типу</a>
-                        </li>
-                        <li>
-                            <a href="#">По рейтингу</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="sorting-btn">
-                    <a href="#" class="up-icon"></a>
-                    <a class="current down-icon" href="#"></a>
-                </div>
-            </section>
-            <article class="view-results clearfix">
-                <div class="photo">
-                    <a href="#"><img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
-                </div>
-                <div class="hotel-container">
-                    <h2>
+            <div class="results-container">
+                <section class="results clearfix">
+                    <div class="found">
+                        <span>Найдено:3</span>
+                    </div>
+                    <div class="sorting">
+                        <span>Сортировка</span>
+                        <ul>
+                            <li class="current">
+                                <a href="#">По цене</a>
+                            </li>
+                            <li>
+                                <a href="#">По типу</a>
+                            </li>
+                            <li>
+                                <a href="#">По рейтингу</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="sorting-btn">
+                        <a href="#" class="up-icon"></a>
+                        <a class="current down-icon" href="#"></a>
+                    </div>
+                </section>
+                <article class="view-results clearfix">
+                    <div class="photo">
+                        <a href="#"><img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa"></a>
+                    </div>
+                    <div class="hotel-container">
+                        <h2>
                         <a href="#">Amara Resort & Spa</a>
                     </h2>
-                    <div class="hotel-type">
-                        <span>Гостиница</span>
-                        <span>От 4000 Р.</span>
+                        <div class="hotel-type">
+                            <span>Гостиница</span>
+                            <span>От 4000 Р.</span>
+                        </div>
+                        <section class="info-btn">
+                            <a href="#" class="btn more-btn">Подробнее</a>
+                            <a href="#" class="btn reserve-btn">Забронировать</a>
+                        </section>
                     </div>
-                    <section class="info-btn">
-                        <a href="#" class="btn more-btn">Подробнее</a>
-                        <a href="#" class="btn reserve-btn">Забронировать</a>
-                    </section>
-                </div>
-                <div class="ratio-info">
-                    <div class="stars">
-                        <span class="star-icon"></span>
-                        <span class="star-icon"></span>
-                        <span class="star-icon"></span>
-                        <span class="star-icon"></span>
+                    <div class="ratio-info">
+                        <div class="stars">
+                            <span class="star-icon"></span>
+                            <span class="star-icon"></span>
+                            <span class="star-icon"></span>
+                            <span class="star-icon"></span>
+                        </div>
+                        <span class="ratio">Рейтинг: 8,5</span>
                     </div>
-                    <span class="ratio">Рейтинг: 8,5</span>
-                </div>
-            </article>
-            <article class="view-results clearfix">
-                <div class="photo">
-                    <a href="#">
-                        <img src="img/desertquail.jpg" width="135" height="90" alt="Desert Quail Inn">
-                    </a>
-                </div>
-                <div class="hotel-container">
-                    <h2>
+                </article>
+                <article class="view-results clearfix">
+                    <div class="photo">
+                        <a href="#">
+                            <img src="img/desertquail.jpg" width="135" height="90" alt="Desert Quail Inn">
+                        </a>
+                    </div>
+                    <div class="hotel-container">
+                        <h2>
                         <a href="#">Desert Quail Inn</a>
                     </h2>
-                    <div class="hotel-type">
-                        <span>Мотель</span>
-                        <span>От 3000 Р.</span>
+                        <div class="hotel-type">
+                            <span>Мотель</span>
+                            <span>От 3000 Р.</span>
+                        </div>
+                        <section class="info-btn">
+                            <a href="#" class="btn more-btn">Подробнее</a>
+                            <a href="#" class="btn reserve-btn">Забронировать</a>
+                        </section>
                     </div>
-                    <section class="info-btn">
-                        <a href="#" class="btn more-btn">Подробнее</a>
-                        <a href="#" class="btn reserve-btn">Забронировать</a>
-                    </section>
-                </div>
-                <div class="ratio-info">
-                    <div class="stars">
-                        <span class="star-icon"></span>
-                        <span class="star-icon"></span>
-                        <span class="star-icon"></span>
+                    <div class="ratio-info">
+                        <div class="stars">
+                            <span class="star-icon"></span>
+                            <span class="star-icon"></span>
+                            <span class="star-icon"></span>
+                        </div>
+                        <span class="ratio">Рейтинг: 8,9</span>
                     </div>
-                    <span class="ratio">Рейтинг: 8,9</span>
-                </div>
-            </article>
-            <article class="view-results">
-                <div class="photo">
-                    <a href="#">
-                        <img src="img/villasatpoco.jpg" width="135" height="90" alt="Villas at Poco Diablo">
-                    </a>
-                </div>
-                <div class="hotel-container">
-                    <h2>
+                </article>
+                <article class="view-results">
+                    <div class="photo">
+                        <a href="#">
+                            <img src="img/villasatpoco.jpg" width="135" height="90" alt="Villas at Poco Diablo">
+                        </a>
+                    </div>
+                    <div class="hotel-container">
+                        <h2>
                         <a href="#">Villas at Poco Diablo</a>
                     </h2>
-                    <div class="hotel-type">
-                        <span>Мотель</span>
-                        <span>От 2000 Р.</span>
+                        <div class="hotel-type">
+                            <span>Мотель</span>
+                            <span>От 2000 Р.</span>
+                        </div>
+                        <section class="info-btn">
+                            <a href="#" class="btn more-btn">Подробнее</a>
+                            <a href="#" class="btn reserve-btn">Забронировать</a>
+                        </section>
                     </div>
-                    <section class="info-btn">
-                        <a href="#" class="btn more-btn">Подробнее</a>
-                        <a href="#" class="btn reserve-btn">Забронировать</a>
-                    </section>
-                </div>
-                <div class="ratio-info">
-                    <div class="stars">
-                        <span class="star-icon"></span>
-                        <span class="star-icon"></span>
+                    <div class="ratio-info">
+                        <div class="stars">
+                            <span class="star-icon"></span>
+                            <span class="star-icon"></span>
+                        </div>
+                        <span class="ratio">Рейтинг: 9,2</span>
                     </div>
-                    <span class="ratio">Рейтинг: 9,2</span>
-                </div>
-            </article>
+                </article>
+            </div>
         </main>
         <footer class="main-footer">
             <section class="footer-contacts">
